--- a/app/src/main/res/layout/activity_pulse_ox_detail.xml
+++ b/app/src/main/res/layout/activity_pulse_ox_detail.xml
@@ -4,35 +4,99 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-        <Spinner
-            android:id="@+id/spinner"
-            android:layout_width="145dp"
-            android:layout_height="44dp"
-            android:text="Last 7 Days" />
-
-        <TextView
-            android:id="@+id/o2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/o2"
-            android:textAppearance="@style/o2"
-            android:layout_marginLeft="20dp"/>
-
-        <com.github.mikephil.charting.charts.BarChart
-            android:id="@+id/oxChart"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="300dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-    </LinearLayout>
+            <Spinner
+                android:id="@+id/spinner"
+                android:layout_width="173dp"
+                android:layout_height="44dp"
+                android:text="Last 7 Days" />
+
+            <TextView
+                android:id="@+id/o2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/o2"
+                android:textAppearance="@style/o2"
+                android:layout_marginLeft="20dp"/>
+
+            <com.github.mikephil.charting.charts.BarChart
+                android:id="@+id/oxBarChart"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <com.github.mikephil.charting.charts.LineChart
+                android:id="@+id/oxLineChart"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
 
+
+                <ImageView
+                    android:id="@+id/currentPulse"
+                    android:layout_width="match_parent"
+                    android:layout_height="125dp"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:src="@drawable/gray_rectangle" />
+
+                <TextView
+                    android:id="@+id/detailPulse"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="50dp"
+                    android:text="N/A"
+                    android:textSize="40dp"
+                    android:layout_centerVertical="true"
+                    />
+
+                <TextView
+                    android:id="@+id/bpmLabel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="100dp"
+                    android:text="resting\n   bpm"
+                    android:textSize="20dp"
+                    android:layout_centerVertical="true"
+                    android:layout_alignLeft="@+id/detailPulse"
+                    />
+
+
+                <ImageView
+                    android:id="@+id/heartImgViewRealtime"
+                    android:layout_width="33dp"
+                    android:layout_height="28dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginRight="35dp"
+                    android:layout_marginBottom="25dp"
+                    android:layout_toEndOf="@+id/bpmLabel"
+                    android:src="@drawable/_icon__heart_" />
+
+
+            </RelativeLayout>
+
+        </LinearLayout>
+
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
