--- a/app/src/main/res/layout/activity_steps_detail.xml
+++ b/app/src/main/res/layout/activity_steps_detail.xml
@@ -9,7 +9,7 @@
         android:orientation="vertical">
         <Spinner
             android:id="@+id/spinner"
-            android:layout_width="145dp"
+            android:layout_width="173dp"
             android:layout_height="44dp"
             android:text="Last 7 Days" />
 
@@ -22,9 +22,15 @@
             android:src="@drawable/material_symbols_steps_outline"/>
 
         <com.github.mikephil.charting.charts.BarChart
-            android:id="@+id/stepsChart"
+            android:id="@+id/stepsBarChart"
             android:layout_width="match_parent"
             android:layout_height="300dp"/>
+        <com.github.mikephil.charting.charts.LineChart
+            android:id="@+id/stepsLineChart"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"/>
+
+
 
     </LinearLayout>
 
